--- a/reactIndex.css
+++ b/reactIndex.css
@@ -1,3 +1,10 @@
 .ant-slider {
   border-color: #ff9900;
 }
+
+.avatar {
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
