--- a/views/public/login.html
+++ b/views/public/login.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, I'm starting to develop</title>
+    <link rel="icon" type="img/png" href="public/img/icon.png">
+    <title>Musicoteca</title>
   </head>
   <body>
     <a href="/auth/facebook">Login</a>
