--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/index.css" />
-    <title>Hello, I'm starting to develop</title>
+    <link rel="icon" type="img/png" href="/public/img/icon.png">
+    <link rel="stylesheet" href="/dist/index.css" />
+    <title>Musicoteca</title>
   </head>
   <body>
     <div id="root"></div>
     <script>
       window.user = <%- JSON.stringify(user) %>
     </script>
-    <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
-    <script src="dist/common.js"></script>
-    <script src="dist/index.js"></script>
+    <script src="/public/js/webtorrent.min.js"></script>
+    <script src="/dist/common.js"></script>
+    <script src="/dist/index.js"></script>
   </body>
 </html>
